Added multi thread runner updated listener, fileReader removed holder